# codevar

./: .gitignore  LICENSE  Makefile  README.md  base91.1  base91.bash-completion  base91.c  codevar  codevar.1  codevar.bash-completion  meson.build  openrouter.sh
debian/: changelog  control  copyright
test/: Makefile  test_base91.sh  test_codevar.sh
